@@ -1,3 +1,9 @@
+2002-09-28  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/io.h: #include stddef.h with __need_wchat_t.
+	* include/wchar.h (__VA_LIST): Define as __builtin_va_list
+	or char*.
+
 2002-09-27  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/stdio.h: Don't include stdarg.h.
